fixed notices/:id/favorites
