# swagger.json
@@ -920,40 +920,79 @@
       "get": {
         "tags": ["notice"],
         "summary": "Get list all favorites notices for current user",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "in": "query",
             "name": "page",
-            "required": true,
+            "required": false,
             "type": "strings",
             "description": "Page"
           },
           {
             "in": "query",
             "name": "limit",
-            "required": true,
+            "required": false,
             "type": "strings",
             "description": "Limit"
           },
           {
             "in": "query",
             "name": "title",
-            "required": true,
+            "required": false,
             "type": "strings",
             "description": "Title"
           },
           {
             "in": "query",
             "name": "category",
-            "required": true,
+            "required": false,
             "type": "strings",
             "description": "Category"
           }
         ],
         "requestBody": {
-          "content": null
+          "content": {
+            "application/json": {}
+          }
         },
         "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NoticesListResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "\"field's name\" is required"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal server error",
             "content": {
@@ -967,10 +1006,11 @@
         }
       }
     },
-    "/notices/:id/favorites": {
+    "/notices/{id}/favorites": {
       "patch": {
         "tags": ["notice"],
         "summary": "Add notice with ID to favorites collection current user",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "in": "path",
@@ -981,9 +1021,37 @@
           }
         ],
         "requestBody": {
-          "content": null
+          "content": {
+            "application/json": {}
+          }
         },
         "responses": {
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "\"field's name\" is required"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unauthorized"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Internal server error",
             "content": {
